src/css/files.css
#blockmenu {
  display: none;
  position: absolute;
  flex-direction: column;
  background-color: var(--bg4);
  border-radius: 4px;
  padding: 8px;
}

#blockmenu #newblockbtns {
  display: flex;
  flex-direction: column;
}

#blockmenu .header {
  color: var(--text4);
  margin-bottom: 2px;
}

#filecontainer {
  flex-grow: 1;
  max-width: calc(var(--maxfilecontentwidth) + 8px + var(--gutterwidth));
}

#filecontainer .filecontent .newblockbtns .newblockbtn {
  background-color: transparent;
  padding: 4px 8px 4px 27px;
  border-radius: 4px;
  background-size: 14px 14px;
  transition: 100ms;
  background-position: 8px 4px;
  color: var(--text4);
}

#blockmenu button {
  background-color: transparent;
  padding: 4px 8px 4px 27px;
  border-radius: 4px;
  background-size: 14px 14px;
  transition: 100ms;
  background-position: 8px 4px;
  color: var(--text5);
}
#blockmenu button:hover {
  background-color: var(--bg4);
  color: var(--text5);
}

#filecontainer .filecontent .newblockbtns {
  margin-left: calc(var(--gutterwidth) + 8px);
  margin-top: 16px;
}

#filecontainer .filecontent {
  display: flex;
  flex-direction: column;
}

#filecontainer .filecontent .filename {
  color: var(--text6);
  font-size: 24px;
  letter-spacing: 0.025em;
  font-weight: bold;
  margin-left: calc(var(--gutterwidth) + 8px);
}

#filecontainer .filecontent .filename:empty:before {
  color: var(--text3);
  content: "Untitled File";
  pointer-events: none;
}

#filecontainer .filecontent .fileblocks {
  display: flex;
  flex-direction: column;
  margin-top: 16px;
  gap: 8px;
}

#filecontainer .filecontent .fileblocks .blockcontainer {
  display: flex;
  align-items: center;
  gap: 8px;
}

#filecontainer .filecontent .fileblocks .blockcontainer:hover .blockmenubtn {
  visibility: visible;
}

#filecontainer .block {
  flex-grow: 1;
}

#filecontainer .block.inline {
  vertical-align: top;
}

#filecontainer .block.inline_code {
  background-color: var(--bg1);
  font-size: 14px;
  border-radius: 3px;
  font-family: consolasfont;
  display: inline;
  padding: 1px 4px 1px 4px;
}

#filecontainer .block.text {
  overflow-x: auto;
  white-space: pre-wrap;
  word-wrap: break-word;
  color: var(--text5);
  font-size: 16px;
}

#filecontainer .block.text:empty:before {
  content: "Text Block";
  color: var(--text3);
  pointer-events: none;
}

#filecontainer .block.code {
  color: var(--text4);
  font-family: consolasfont;
  background-color: var(--bg1);
  padding: 8px 16px;
  overflow: auto;
  font-size: 14px;
  border-radius: 6px;
}

#filecontainer .block.code:empty:before {
  content: "Code Block";
  color: var(--text3);
  pointer-events: none;
}

#filecontainer .block.heading {
  overflow-x: auto;
  white-space: pre-wrap;
  word-wrap: break-word;
  color: var(--text6);
  font-size: 20px;
}

#filecontainer .block.heading:empty:before {
  content: "Heading";
  color: var(--text3);
  pointer-events: none;
}

#filecontainer .block.divider {
  border-top: 2px solid var(--bg4);
  height: 0;
}

#filecontainer .blockmenubtn {
  width: calc(var(--gutterwidth));
  height: 24px;
  visibility: hidden;
  background-size: 14px;
  align-self: flex-start;
  border-radius: 4px;
  background-color: transparent;
}
#filecontainer .blockmenubtn:hover {
  background-color: var(--bg3);
}

#filecontainer .blockmenubtn:active {
  background-color: var(--bg4);
}
#filecontainer .filecontent .newblockbtns .newblockbtn:hover {
  background-color: var(--bg3);
  color: var(--text5);
}

/* tags */
.tag {
  display: inline-flex;
  border-radius: 14px;
  font-size: 12px;
  align-items: center;
  padding: 1px 8px 1px 8px;
  column-gap: 0.3em;
}

.tag.green {
  background-color: var(--greentransparent);
  color: var(--green);
}

.tag.green.border {
  border: 1px solid var(--green);
}

.tag.yellow {
  background-color: var(--yellowtransparent);
  color: var(--yellow);
}

.tag.yellow.border {
  border: 1px solid var(--yellow);
}

.tag.blue {
  background-color: var(--bluetransparent);
  color: var(--blue);
}

.tag.blue.border {
  border: 1px solid var(--blue);
}

.tag.red {
  background-color: var(--redtransparent);
  color: var(--red);
}

.tag.red.border {
  border: 1px solid var(--red);
}

.tag-icon {
  vertical-align: text-bottom;
  height: 1em;
  width: 1em;
}

